2007-05-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_path.c
	(Cairo::Path#size, Cairo::Path#length, Cairo::Path#empty?): added.
	(Cairo::Path#[]): supported negative index.

	* src/rb_cairo_path.c (Cairo::PathData#each): added.

	* src/rb_cairo.h, src/rb_cairo_path.c: added Cairo::Point and
	Cairo::PathData.

	* src/lib/cairo/point.rb (Cairo::Point#distance): moved from
	Cairo::Context::Path::Point.
	* src/lib/cairo/context/path.rb (Cairo::Context::Path::Point):
	removed.
	* src/lib/cairo.rb, src/lib/cairo/context/path.rb: used Cairo::Point.

2007-05-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_pattern.c
	(cr_gradient_pattern_get_color_stop_color): cleanup.

	* src/rb_cairo.[ch]: exported Cairo::Color and Cairo::Color::Base.
	* src/lib/cairo.rb: require cairo/color before cairo.so to export
	Cairo::Color to cairo.so.

	* src/rb_cairo_pattern.c: implemented src/lib/cairo/patter.rb
	methods in C.
	* src/lib/cairo/pattern.rb: removed.
	* src/lib/cairo.rb: removed cairo/pattern.

	* src/rb_cairo_private.[ch] (rb_cairo__const_get,
	Init_cairo_private): added.
	* src/rb_cairo.c: moved Init_* declarations to rb_cairo_private.h.
	* src/rb_cairo_constants.c: supported abbrev notation for constant
	name. We can write just like
	  context.antialias = :none
	instead of
	  context.antialias = Cairo::ANTIALIAS_NONE

	* src/lib/cairo.rb (Cairo.normalize_const_name): added.
	* src/lib/cairo/color.rb: used Cairo.normalize_const_name.

2007-04-30  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/context.rb, src/lib/cairo/context/quad.rb: moved
	quadratic Bézier curve support to ...
	* src/rb_cairo_context.c: ... here.

	* src/lib/cairo/context/path.rb
	(Cairo::Context::Path#map_path_onto): fixed a boundary value bug.

2007-04-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c (Cairo::Context#stroke,
	Cairo::Context#fill, Cairo::Context#clip): accept 'prserve' option
	to change XXX and XXX_preserve.