@@ -3,7 +3,7 @@
  * Ruby Cairo Binding
  *
  * $Author: kou $
- * $Date: 2007-03-06 12:17:34 $
+ * $Date: 2007-05-03 02:47:39 $
  *
  * Copyright 2005 Øyvind Kolås <pippin@freedesktop.org>
  * Copyright 2004-2005 MenTaLguY <mental@rydia.com>
@@ -24,7 +24,7 @@ cairo_matrix_t *
 rb_cairo_matrix_from_ruby_object (VALUE obj)
 {
   cairo_matrix_t *matrix;
-  if (!RTEST (rb_obj_is_kind_of (obj, rb_cCairo_Matrix)))
+  if (!rb_cairo__is_kind_of (obj, rb_cCairo_Matrix))
     {
       rb_raise (rb_eTypeError, "not a cairo matrix");
     }
