@@ -3,7 +3,7 @@
  * Ruby Cairo Binding
  *
  * $Author: kou $
- * $Date: 2007-03-06 12:17:34 $
+ * $Date: 2007-05-03 02:47:39 $
  *
  * Copyright 2005 Øyvind Kolås <pippin@freedesktop.org>
  * Copyright 2004-2005 MenTaLguY <mental@rydia.com>
@@ -13,6 +13,7 @@
  */
 
 #include "rb_cairo.h"
+#include "rb_cairo_private.h"
 
 VALUE rb_cCairo_TextExtents;
 
@@ -22,7 +23,7 @@ cairo_text_extents_t *
 rb_cairo_text_extents_from_ruby_object (VALUE obj)
 {
   cairo_text_extents_t *extents;
-  if (!RTEST (rb_obj_is_kind_of (obj, rb_cCairo_TextExtents)))
+  if (!rb_cairo__is_kind_of (obj, rb_cCairo_TextExtents))
     {
       rb_raise (rb_eTypeError, "not a cairo text_extents");
     }
